src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__nested_while_with_missing_end_while.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token [KeywordEndWhile]
  ┌─ <internal>:7:12
  │
7 │            END_PROGRAM
  │            ^^^^^^^^^^^ Missing expected Token [KeywordEndWhile]

error[E007]: Unexpected token: expected KeywordEndWhile but found 'END_PROGRAM'
  ┌─ <internal>:7:12
  │
7 │            END_PROGRAM
  │            ^^^^^^^^^^^ Unexpected token: expected KeywordEndWhile but found 'END_PROGRAM'
